fix z-index issue for character-box overlapping nav on activities

--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -1647,7 +1647,7 @@ h2, h3, h4 {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 1;
   border-top: 13px solid gold;
   border-right: 13px solid transparent;
 }
